2008-10-05  Chong Yidong  <cyd@stupidchicken.com>

	* international/mule-cmds.el (universal-coding-system-argument):
	Handle digit-argument too.

2008-10-05  Mario Lang  <mlang@delysid.org>

	* xml.el (xml-parse-string): Use skip-chars-forward.

2008-10-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Parse the output for non
	existent files.
	(vc-bzr-dir-status-files): New function.

2008-10-04  Glenn Morris  <rgm@gnu.org>

	* files.el (make-temp-file): Handle empty `prefix'.  (Bug#1081)

	* vc-svn.el (vc-svn-after-dir-status): Handle `svn status -u' output.
	(vc-svn-dir-status): Respect vc-stay-local-p.  (Bug#1046)

	* vc-cvs.el (vc-cvs-dir-status-heuristic): New function.
	(vc-cvs-dir-status): Respect vc-stay-local-p.  (Bug#1046)

2008-10-04  David J. Biesack  <David.Biesack@sas.com>  (tiny change)

	* progmodes/antlr-mode.el (antlr-font-lock-additional-keywords):
	Fix typo.  (Bug#1074)

2008-10-04  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/compile.el (compilation-start): Make sure to move to
	point-max only when we are in the compilation buffer. (Bug#1073)

2008-10-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* faces.el (x-create-frame-with-faces): Only setup the toolbar if
	tool-bar-mode is on.

	* vc-svn.el (vc-svn-dir-status-files):
	* vc-cvs.el (vc-cvs-dir-status-files): New function.

2008-10-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-dir-status-files): New function.

2008-10-03  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--display-buffer-1): Don't care about
	visibility since raise-frame does.

2008-10-03  Mario Lang  <mlang@delysid.org>

	* nxml/xmltok.el (xmltok-forward): Simplify.

2008-10-03  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

	* frame.el (set-default-font): Make obsolete.
	* mouse.el (mouse-set-font): Use set-frame-font.

	* jka-cmpr-hook.el (jka-compr-compression-info-list)
	(jka-compr-mode-alist-additions): Also match `.tbz2'.
